# FiszkiWBiegu

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  idea-aplikacji.md  render.yaml  setup.sh
.claude/: settings.local.json
.claude/commands/: cargo-new-ver.md  refresh-docs.md  run-app.md
.claude/skills/trim-agents-md/: SKILL.md
.githooks/: pre-push
.github/workflows/: backend-deploy.yml  ci.yml
apps/backend/: .gitignore  Cargo.toml
apps/backend/migrations/: 002_add_users.sql  006_add_collection_tracking.sql  007_rename_flashcard_columns.sql  008_add_srs_level.sql  009_add_last_studied_at.sql  010_add_total_study_minutes.sql  011_drop_collection_progress.sql
apps/backend/src/: error.rs  lib.rs  main.rs  models.rs  seed.rs  translation.rs
apps/backend/src/handlers/: auth.rs  collections.rs  deploy.rs  flashcards.rs  learning.rs  mod.rs  translate.rs
apps/backend/tests/: README.md  REST.http  integration.rs
apps/backend/tests/auth/: mod.rs
apps/backend/tests/collections/: mod.rs
apps/backend/tests/common/: mod.rs
apps/backend/tests/deploy/: mod.rs
apps/backend/tests/flashcards/: mod.rs
apps/backend/tests/learning/: mod.rs
apps/frontend/: .gitignore  README.md
apps/frontend/androidApp/: build.gradle.kts  proguard-rules.pro
apps/frontend/gradle/: libs.versions.toml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  003_add_languages.sql  004_add_description.sql  005_add_user_profile.sql
backend/src/: auth.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  collections.rs  learning.rs  mod.rs
context/archive/2026-05-27-f-01/: change.md  plan-brief.md
context/archive/2026-05-27-s-01/: change.md
context/archive/2026-05-27-s-02/: change.md  plan-brief.md  plan.md
context/archive/2026-05-27-s-02a/: change.md  plan-brief.md  plan.md
context/archive/2026-05-27-s-03/: change.md
context/archive/2026-05-28-ui-reskin-design-system/: change.md
context/archive/2026-05-28-ui-reskin-screens/: change.md
context/archive/2026-05-29-collection-language-select/: change.md  plan-brief.md  plan.md
context/archive/2026-05-29-material-design-3/: change.md  plan-brief.md  plan.md
context/archive/2026-05-29-project-structure-cleanup/: change.md
context/archive/2026-05-29-rename-flashcard-fields/: change.md
context/archive/2026-05-29-ui-reskin-backend-stubs/: change.md
context/archive/2026-05-29-ui-reskin-new-screens/: change.md
context/archive/2026-05-29-ui-tweaks/: change.md
context/archive/2026-06-18-srs-learning/: change.md  research.md
context/archive/2026-06-18-srs-learning-2/: change.md  plan-brief.md  plan.md
context/archive/2026-06-19-back-stack-leak/: change.md  research.md
context/archive/2026-06-19-box-to-button/: change.md
context/archive/2026-06-19-headphone-buttons/: change.md  research.md
context/archive/2026-06-19-learning-start-bug/: change.md  research.md
context/archive/2026-06-19-srs-local-refresh/: change.md  research.md
context/archive/2026-06-19-study-time-tracking/: change.md
context/archive/2026-06-19-web-crud-service/: change.md  research.md
context/archive/2026-06-22-flashcard-translate/: change.md  plan.md  research.md
context/archive/2026-06-22-integration-tests/: change.md  plan-brief.md  plan.md
context/archive/2026-06-25-collection-refresh-hang/: change.md  research.md
context/archive/2026-06-25-pull-to-refresh/: change.md  plan-brief.md  plan.md
context/archive/2026-06-25-seed-new-user/: change.md  plan.md
context/changes/back-stack-leak/: change.md
context/changes/bootstrap-verification/: verification.md
context/changes/box-to-button/: change.md  research.md
context/changes/f-01/: plan.md  (+1 more)
context/docs/: database.md  openapi.yaml
context/foundation/: infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md
frontend/: settings.gradle.kts
frontend/androidApp/: build.gradle.kts
frontend/gradle/: libs.versions.toml
frontend/shared/: build.gradle.kts
(+210 files in other folders)
