# cargo update; cargo upgrade

[package]
name = "fiszki-w-biegu"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13"
actix-cors = "0.7"
tokio = { version = "1.52", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "10"
dotenv = "0.15"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
