# cargo update; cargo upgrade

[package]
name = "fiszki-w-biegu-server"
version = "0.1.8"
edition = "2024"

[dependencies]
log = "0.4"
flexi_logger = { version = "0.31", features = ["async"] }
actix-web = "4.13"
actix-cors = "0.7"
tokio = { version = "1.52", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dotenv = "0.15"
reqwest = { version = "0.13", features = ["json", "rustls", "gzip","deflate","brotli"], default-features = false }

[dev-dependencies]
# Integration tests spin up a real Postgres in Docker. testcontainers manages
# the container lifecycle; reqwest/sqlx/jsonwebtoken/uuid are reused from deps.
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
# Process-exit hook to remove the shared container (testcontainers removes on Drop,
# which never runs for a container held in a 'static OnceCell; no Ryuk reaper exists).
# Destructors live in the `dtor` crate (split out of `ctor` in its 1.0 release).
dtor = "1.0.5"

[profile.release]
opt-level = "z"      # optymalizuj pod kątem rozmiaru (alternatywnie "s" dla lepszego balansu)
lto = true           # Link-Time Optimization — eliminuje martwy kod między kratami
codegen-units = 1    # jeden unit = lepsza optymalizacja, dłuższa kompilacja
